--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -32,8 +32,8 @@
 .home {
   .header-content {
     position: relative;
-    bottom: 550px;
-    margin-bottom: -550px;
+    bottom: 600px;
+    margin-bottom: -620px;
 
     input {
       height: 50px;
