--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -25,11 +25,7 @@
     display: block;
     right: auto;
   }
-  .tt-hint {
-    top: 8px !important;
-    line-height: 14px !important;
-    color: #dcdcdc !important;
-  }
+
   .tt-suggestions {
     //position: absolute;
     //top: 55px;
